--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint": "latest",
     "eslint-config-next": "14.2.8",
     "postcss": "latest",
+    "supabase": "^2.23.4",
     "tailwindcss": "latest",
     "tw-animate-css": "^1.3.2",
     "typescript": "latest"
