--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.79.0",
+    "@types/leaflet": "^1.9.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
@@ -54,6 +56,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.1.0",
     "react-hook-form": "^7.56.4",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.4",
