--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@clerk/nextjs": "^6.12.12",
     "@hookform/resolvers": "^5.0.1",
-    "@reduxjs/toolkit": "^2.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -38,9 +38,11 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.79.0",
     "@types/leaflet": "^1.9.18",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -54,9 +56,9 @@
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
-    "react-redux": "^9.1.0",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
+    "react-redux": "^9.1.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.4",
